kubernetes/manifests/postgresql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: db
      port: 5432
  selector:
    app: postgresql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: default
  labels:
    app: postgresql
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@midnight"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: db
          image: postgres:12-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "2048Mi"
              cpu: "3.0"
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
            - name: scripts
              mountPath: /docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
              subPath: create-multiple-postgresql-databases.sh
      volumes:
        - name: db
          hostPath:
            path: /storage/postgresql
        - name: scripts
          configMap:
            name: postgresql-scripts
            defaultMode: 0744
