kubernetes/manifests/red.yml
---
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: red

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  labels:
    app: red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: phasecorex/red-discordbot:full
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "2Gi"
              cpu: "2.00"
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /storage/red/data
