kubernetes/manifests/aria2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: aria2
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: aria2

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: aria2
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`aria2.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: aria2
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aria2
  labels:
    app: aria2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aria2
  template:
    metadata:
      labels:
        app: aria2
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: vpn
          image: qmcgaw/gluetun
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
        - name: app
          image: wahyd4/aria2-ui
          resources:
            requests:
              memory: "512Mi"
              cpu: "1.00"
            limits:
              memory: "1024Mi"
              cpu: "5.00"
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /app/conf
            - name: media
              mountPath: /data
      volumes:
        - name: config
          hostPath:
            path: /storage/aria2/config
        - name: media
          hostPath:
            path: /storage/aria2/media
