kubernetes/manifests/home-assistant.yml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8123
  selector:
    app: home-assistant

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`home-assistant.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: default
  labels:
    app: home-assistant
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: ghcr.io/home-assistant/home-assistant:stable
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.25"
            limits:
              memory: "2048Mi"
              cpu: "2.00"
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /storage/home-assistant/config
