kubernetes/manifests/huginn.yml
---
apiVersion: v1
kind: Service
metadata:
  name: huginn
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: huginn

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: huginn
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`huginn.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: huginn
          port: 3000
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn
  namespace: default
  labels:
    app: huginn
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huginn
  template:
    metadata:
      labels:
        app: huginn
    spec:
      containers:
        - name: app
          image: huginn/huginn
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "2.00"
          ports:
            - name: web
              containerPort: 3000
