kubernetes/manifests/jellyfin.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8096
  selector:
    app: jellyfin

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jellyfin.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: default
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: jellyfin/jellyfin
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "4096Mi"
              cpu: "6.00"
          ports:
            - name: web
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          hostPath:
            path: /storage/jellyfin/config
        - name: media
          hostPath:
            path: /storage/jellyfin/media
