kubernetes/manifests/keycloak.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
    - protocol: TCP
      name: ldap
      port: 389
  selector:
    app: keycloak

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`keycloak.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: ldap
          image: osixia/openldap
          args:
            - --copy-service
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "512Mi"
              cpu: "1.00"
          ports:
            - name: ldap
              containerPort: 389
          volumeMounts:
            - name: custom-ldap-config
              mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom
            - name: openldap-db
              mountPath: /var/lib/ldap
            - name: openldap-config
              mountPath: /etc/ldap/slapd.d
        # When using LDAP, check "Enable the LDAPv3 Password Modify Extended Operation"
        - name: app
          image: quay.io/keycloak/keycloak
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "2.00"
          ports:
            - name: web
              containerPort: 8080
      volumes:
        - name: custom-ldap-config
          configMap:
            name: custom-ldap-config
        - name: ldap
          configMap:
            name: ldap
        - name: openldap-db
          hostPath:
            path: /storage/keycloak/openldap_db
        - name: openldap-config
          hostPath:
            path: /storage/keycloak/openldap_config
