kubernetes/manifests/kubernetes-dashboard.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`kubernetes.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          namespace: kubernetes-dashboard
          port: 443
          scheme: http
  tls:
    secretName: wilcard-main-domain-tls
