kubernetes/manifests/nextcloud.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: nextcloud

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect
spec:
  redirectRegex:
    permanent: true
    regex: "https://(.*)/.well-known/(card|cal)dav"
    replacement: "https://${1}/remote.php/dav/"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nextcloud.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
      middlewares:
        - name: nextcloud-redirect
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: redis
          image: redis:6-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "256Mi"
              cpu: "1.00"
          volumeMounts:
            - name: redis
              mountPath: /data
        - name: db
          image: postgres:12-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "512Mi"
              cpu: "1.00"
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
        - name: app
          image: nextcloud:22
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "4096Mi"
              cpu: "4.00"
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: data
              mountPath: /var/www/html/data
      volumes:
        - name: app
          hostPath:
            path: /storage/nextcloud/app
        - name: data
          hostPath:
            path: /storage/nextcloud/data
        - name: db
          hostPath:
            path: /storage/nextcloud/db
        - name: redis
          hostPath:
            path: /storage/nextcloud/redis
