kubernetes/manifests/pihole.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: pihole

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: dns-tcp
      port: 53
  selector:
    app: pihole
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: default
spec:
  ports:
    - protocol: UDP
      name: dns-udp
      port: 53
  selector:
    app: pihole
  type: LoadBalancer

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pihole.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: pihole
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: default
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      affinity:
        nodeAffinity:
          # Only on DNS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: dns
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: pihole/pihole
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 80
            - name: dns-tcp
              containerPort: 53
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: config
          hostPath:
            path: /storage/pihole/config
        - name: dnsmasq
          hostPath:
            path: /storage/pihole/dnsmasq.d
