kubernetes/manifests/smart-strike.yml
---
apiVersion: v1
kind: Service
metadata:
  name: smart-strike
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: smart-strike

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smart-strike
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`smart-strike.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: smart-strike
          port: 3000
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: smart-strike
  labels:
    app: smart-strike
spec:
  selector:
    matchLabels:
      app: smart-strike
  template:
    metadata:
      labels:
        app: smart-strike
    spec:
      affinity:
        nodeAffinity:
          # Only on local nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: local
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: archanes/smart-strike
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.05"
            limits:
              memory: "64Mi"
              cpu: "0.25"
          ports:
            - name: web
              containerPort: 3000
