kubernetes/manifests/ttrss.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ttrss
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: ttrss

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ttrss
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ttrss.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: ttrss
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttrss
  labels:
    app: ttrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ttrss
  template:
    metadata:
      labels:
        app: ttrss
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: db
          image: postgres:12-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "256Mi"
              cpu: "0.5"
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
        - name: app
          image: wangqiru/ttrss
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "0.5"
          ports:
            - name: web
              containerPort: 80
      volumes:
        - name: db
          hostPath:
            path: /storage/ttrss/db
